# sprint

./: .gitignore  LICENSE  README.md  catalog.json  manifest.json  pyproject.toml  requirements.txt
data/sessions/: 70a1d2f0-dd2b-4941-bfaa-226a3074af95_2025-08-07T11:48:04.482537+00:00.json
dbt_project/: .gitignore  README.md  dbt_project.yml
dbt_project/macros/: compute_encounters.sql
dbt_project/models/marts/: country_monthly_playtime.sql  country_weekly_revenue.sql  encounter_summary_daily.sql  player_activity_daily.sql  player_consecutive_days_monthly.sql  player_stats_lifetime.sql  schema.yml  session_close_encounters_daily.sql
dbt_project/models/staging/: event_heartbeat.sql  schema.yml  stage_centroids.sql  stage_encounters.sql  stg_heartbeats.sql
dbt_project/seeds/: dim_products.csv  schema.yml
dbt_project/tests/: country_referential_integrity.sql  no_zero_duration_encounters.sql  non_negative_playtime.sql  revenue_consistency_weekly.sql  test_activity_matches_heartbeats.sql  test_consecutive_days_within_month.sql
docs/: catalog.json
notebooks/: analysis.ipynb  player_paths.ipynb
scripts/: README.md  generate_sample_data.py  load_to_duckdb.py  main.py
src/: README.md  generate_sample_data.py  heartbeat_generator.py  load_to_duckdb.py  loader.py  product_generator.py  session_generator.py  summarizer.py  transaction_generator.py  utils.py
src/movement/: lissajous.py  lorentzian.py  perlin.py
src/movement/step/: bezier.py  lissajous.py  perlin.py
tests/: README.md  test_db.py  test_products.py  test_sessions.py  test_transactions.py
