[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprint"
version = "0.1.0"
description = "Sprint data engineering project"
authors = [{ name = "Chris Adan" }]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
